2008-11-13  Neal H. Walfield  <neal@gnu.org>

	* profile.c (profile_stats_dump): Sort by the total time.

2008-11-11  Neal H. Walfield  <neal@gnu.org>

	* s_printf.c [! RM_INTERN] (s_printf): Don't use s_putchar to send
	individual characters.  Use an io_buffer instead.

2008-11-11  Neal H. Walfield  <neal@gnu.org>

	* profile.c [! __gnu_hurd_viengoos__]: Don't include <l4.h> or
	<hurd/rm.h>.  Include <sys/time.h> and <stdio.h>.
	[! __gnu_hurd_viengoos__ && ! PAGESIZE] (PAGESIZE): Define.
	[! __gnu_hurd_viengoos__ && ! panic] (panic): Define.
	[! __gnu_hurd_viengoos__ && ! do_debug] (do_debug): Define.
	(now): New function.
	(profile_stats_dump): Use it instead of l4_system_clock.
	(profile_start): Likewise.
	(profile_end): Likewise.
	(profile_start) [__gnu_hurd_viengoos__]: If NAME is NULL, use
	"unknown".

	* profile.h [! RM_INTERN] (NPROFILE): Don't define.

2008-11-03  Neal H. Walfield  <neal@gnu.org>

	* headers.m4: Don't create an empty libc-parts/libc-parts.a.

2008-07-08  Neal H. Walfield  <neal@gnu.org>

	* profile.h: Moved here from ../viengoos/profile.h.
	(profile_region): New macro.
	(profile_region_end): Likewise.
	(profile_start) [NPROFILE]: Do nothing in this case.
	(profile_end) [NPROFILE]: Likewise.
	(profile_stats_dump) [NPROFILE]: Likewise.
	* profile.c: Moved here from ../viengoos/profile.c.
	(profile_start) [! RM_INTERN]: Use a static buffer.
	* Makefile.am (common_sources): Add fields profile.c and
	profile.h.

2008-07-08  Neal H. Walfield  <neal@gnu.org>

	* process-spawn.c (process_spawn): Don't add an extra trailing NUL
	to the argment vector or the environment vector.

	* ia32-cmain.c (finish): Assume the command line is in argz
	format and parse it appropriately.

2008-07-04  Neal H. Walfield  <neal@gnu.org>

	* _exit.c (_exit): Print a backtrace.

2008-07-01  Neal H. Walfield  <neal@gnu.org>

	* process-spawn.c (process_spawn): Separate arguments with a NUL,
	not a space.  Likewise of environment variables.  Correctly off by